--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
-    "@pinia/testing": "^0.0.14",
-    "axios": "^1.2.1",
-    "pinia": "^2.0.28",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "@pinia/testing": "^0.1.2",
+    "axios": "^1.4.0",
+    "pinia": "^2.1.4",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
-    "@testing-library/vue": "^6.6.1",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitest/coverage-c8": "^0.25.7",
+    "@testing-library/vue": "^7.0.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-v8": "^0.32.2",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/test-utils": "^2.2.6",
+    "@vue/test-utils": "^2.4.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vitest-globals": "^1.2.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.3",
-    "json-server": "^0.17.1",
+    "eslint": "^8.43.0",
+    "eslint-plugin-vitest-globals": "^1.3.1",
+    "eslint-plugin-vue": "^9.15.0",
+    "jsdom": "^22.1.0",
+    "json-server": "^0.17.3",
     "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.4",
-    "vite": "^4.0.0",
-    "vitest": "^0.25.6"
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.9",
+    "vitest": "^0.32.2"
   }
 }
