--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^7.0.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^20.3.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-v8": "^0.32.2",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.0",
+    "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.43.0",
     "eslint-plugin-vitest-globals": "^1.3.1",
@@ -39,6 +43,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2"
   }
