--- a/package.json
+++ b/package.json
@@ -7,44 +7,47 @@
     "backend": "json-server --watch db.json",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest --environment jsdom --coverage",
+    "test": "vitest --coverage",
+    "test:e2e": "npx playwright test",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
-    "@pinia/testing": "^0.1.2",
+    "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
+    "@pinia/testing": "^0.1.2",
+    "@playwright/test": "^1.36.1",
+    "@rushstack/eslint-patch": "^1.3.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^7.0.0",
     "@types/jsdom": "^21.1.1",
-    "@types/node": "^20.3.3",
+    "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vitest/coverage-v8": "^0.32.2",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vitest/coverage-v8": "^0.33.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.0",
     "@vue/tsconfig": "^0.4.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.43.0",
-    "eslint-plugin-vitest-globals": "^1.3.1",
-    "eslint-plugin-vue": "^9.15.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.45.0",
+    "eslint-plugin-vitest-globals": "^1.4.0",
+    "eslint-plugin-vue": "^9.15.1",
     "jsdom": "^22.1.0",
     "json-server": "^0.17.3",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.26",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+    "vite": "^4.4.4",
+    "vitest": "^0.33.0"
   }
 }
