--- a/package.json
+++ b/package.json
@@ -1,53 +1,51 @@
 {
   "name": "careers-frontend",
+  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "vite build",
     "dev": "vite --port 8080",
     "backend": "json-server --watch db.json",
-    "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest --coverage",
+    "test": "vitest",
     "test:e2e": "npx playwright test",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/vue-fontawesome": "^3.0.2",
-    "@vueuse/core": "^10.2.1",
-    "axios": "^1.4.0",
-    "pinia": "^2.1.4",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@vueuse/core": "^10.6.1",
+    "axios": "^1.6.2",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@pinia/testing": "^0.1.2",
-    "@playwright/test": "^1.36.1",
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@testing-library/vue": "^7.0.0",
-    "@types/jsdom": "^21.1.1",
-    "@types/node": "^20.4.2",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitest/coverage-v8": "^0.33.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.4.0",
-    "@vue/tsconfig": "^0.4.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
+    "@antfu/eslint-config": "^1.2.1",
+    "@pinia/testing": "^0.1.3",
+    "@playwright/test": "^1.39.0",
+    "@rushstack/eslint-patch": "^1.5.1",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/vue": "^8.0.0",
+    "@types/jsdom": "^21.1.5",
+    "@types/node": "^20.9.0",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.2",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.54.0",
     "eslint-plugin-vitest-globals": "^1.4.0",
-    "eslint-plugin-vue": "^9.15.1",
+    "eslint-plugin-vue": "^9.18.1",
     "jsdom": "^22.1.0",
-    "json-server": "^0.17.3",
-    "postcss": "^8.4.26",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.4",
-    "vitest": "^0.33.0"
+    "json-server": "^0.17.4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
   }
 }
