--- a/package.json
+++ b/package.json
@@ -1,51 +1,61 @@
 {
-  "name": "careers-frontend",
   "type": "module",
-  "version": "0.0.0",
   "private": true,
+  "packageManager": "pnpm@8.10.5",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "vite build",
-    "dev": "vite --port 8080",
-    "backend": "json-server --watch db.json",
+    "dev": "vite --port 8080 --open",
+    "lint": "eslint .",
     "preview": "vite preview",
+    "backend": "json-server --watch db.json",
     "test": "vitest",
-    "test:e2e": "npx playwright test",
-    "lint": "eslint . --fix"
+    "test:e2e": "cypress open",
+    "typecheck": "vue-tsc --noEmit",
+    "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/vue-fontawesome": "^3.0.5",
-    "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.2.1",
+    "@antfu/eslint-config": "^2.1.0",
+    "@iconify/vue": "^4.1.1",
     "@pinia/testing": "^0.1.3",
-    "@playwright/test": "^1.39.0",
-    "@rushstack/eslint-patch": "^1.5.1",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/user-event": "^14.5.1",
-    "@testing-library/vue": "^8.0.0",
-    "@types/jsdom": "^21.1.5",
-    "@types/node": "^20.9.0",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@testing-library/vue": "^8.0.1",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.10.0",
+    "@vitejs/plugin-vue": "^4.5.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.2",
     "autoprefixer": "^10.4.16",
+    "cypress": "^13.6.0",
+    "cypress-vite": "1.5.0",
     "eslint": "^8.54.0",
     "eslint-plugin-vitest-globals": "^1.4.0",
     "eslint-plugin-vue": "^9.18.1",
     "jsdom": "^22.1.0",
     "json-server": "^0.17.4",
+    "lint-staged": "15.1.0",
+    "pnpm": "^8.11.0",
     "postcss": "^8.4.31",
+    "simple-git-hooks": "^2.9.0",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6"
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
+    "vitest": "^1.0.0-beta.5",
+    "vue-tsc": "^1.8.22"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
