--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,10 @@
   "compilerOptions": {
     "target": "ESNext",
     "jsx": "preserve",
-    "lib": [
-      "DOM",
-      "ESNext"
-    ],
+    "lib": ["DOM", "ESNext"],
     "baseUrl": ".",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "paths": {
       "@/*": [
         "src/*"
@@ -32,6 +29,7 @@
   "exclude": [
     "dist",
     "node_modules",
-    "cypress"
+    "cypress",
+    "eslint.config.js"
   ]
 }
