--- a/package.json
+++ b/package.json
@@ -19,38 +19,38 @@
   "dependencies": {
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
-    "vue": "^3.3.8",
+    "vue": "^3.3.9",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.1.0",
+    "@antfu/eslint-config": "^2.2.0",
     "@iconify/vue": "^4.1.1",
     "@pinia/testing": "^0.1.3",
-    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/user-event": "^14.5.1",
     "@testing-library/vue": "^8.0.1",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.10.0",
-    "@vitejs/plugin-vue": "^4.5.0",
+    "@types/node": "^20.10.2",
+    "@vitejs/plugin-vue": "^4.5.1",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.2",
+    "@vue/test-utils": "^2.4.3",
     "autoprefixer": "^10.4.16",
     "cypress": "^13.6.0",
     "cypress-vite": "1.5.0",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-vitest-globals": "^1.4.0",
-    "eslint-plugin-vue": "^9.18.1",
-    "jsdom": "^22.1.0",
+    "eslint-plugin-vue": "^9.19.2",
+    "jsdom": "^23.0.1",
     "json-server": "^0.17.4",
     "lint-staged": "15.1.0",
     "pnpm": "^8.11.0",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.32",
     "simple-git-hooks": "^2.9.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2",
-    "vite": "^5.0.2",
-    "vitest": "^1.0.0-beta.5",
-    "vue-tsc": "^1.8.22"
+    "vite": "^5.0.4",
+    "vitest": "1.0.0-beta.6",
+    "vue-tsc": "^1.8.24"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
