--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     },
     "resolveJsonModule": true,
     "types": [
-      "vitest/globals",
-      "@testing-library/jest-dom"
+      "@testing-library/jest-dom",
+      "vitest/globals"
     ],
     "allowJs": true,
     "strict": true,
@@ -29,7 +29,6 @@
   "exclude": [
     "dist",
     "node_modules",
-    "cypress",
-    "eslint.config.js"
+    "cypress"
   ]
 }
