--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.10.5",
+  "packageManager": "pnpm@8.13.1",
   "engines": {
     "node": ">=20"
   },
@@ -11,46 +11,46 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "backend": "json-server --watch db.json",
-    "test": "vitest",
+    "test": "NODE_OPTIONS=--trace-deprecation vitest",
     "test:e2e": "cypress open",
     "typecheck": "vue-tsc --noEmit",
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.6.5",
     "pinia": "^2.1.7",
-    "vue": "^3.3.12",
+    "vue": "^3.4.5",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.4.6",
+    "@antfu/eslint-config": "^2.6.1",
     "@iconify/vue": "^4.1.1",
     "@pinia/testing": "^0.1.3",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/user-event": "^14.5.2",
     "@testing-library/vue": "^8.0.1",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.10.5",
-    "@vitejs/plugin-vue": "^4.5.2",
+    "@types/node": "^20.10.6",
+    "@vitejs/plugin-vue": "^5.0.2",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.3",
     "autoprefixer": "^10.4.16",
-    "cypress": "^13.6.1",
+    "cypress": "^13.6.2",
     "cypress-vite": "1.5.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vitest-globals": "^1.4.0",
     "eslint-plugin-vue": "^9.19.2",
-    "jsdom": "^23.0.1",
+    "jsdom": "^23.1.0",
     "json-server": "^0.17.4",
     "lint-staged": "15.2.0",
-    "pnpm": "^8.12.1",
-    "postcss": "^8.4.32",
+    "pnpm": "^8.14.0",
+    "postcss": "^8.4.33",
     "simple-git-hooks": "^2.9.0",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vitest": "1.0.4",
-    "vue-tsc": "^1.8.25"
+    "vite": "^5.0.11",
+    "vitest": "1.1.3",
+    "vue-tsc": "^1.8.27"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
