--- a/web/package.json
+++ b/web/package.json
@@ -15,33 +15,42 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "@primevue/forms": "^4.2.3",
+    "@primevue/themes": "^4.2.3",
+    "@vee-validate/yup": "^4.14.7",
+    "axios": "^1.7.7",
+    "neverthrow": "^8.1.1",
+    "pinia": "^2.2.6",
+    "primevue": "^4.2.3",
+    "tailwindcss-primeui": "^0.3.4",
+    "vee-validate": "^4.14.7",
+    "vue": "^3.5.13",
+    "vue-i18n": "^10.0.4",
+    "vue-router": "^4.4.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.17.0",
+    "@antfu/eslint-config": "^3.9.2",
     "@iconify/vue": "^4.1.2",
-    "@pinia/testing": "^0.1.3",
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.12.11",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/eslint-config-typescript": "^13.0.0",
+    "@pinia/testing": "^0.1.7",
+    "@playwright/test": "^1.49.0",
+    "@primevue/auto-import-resolver": "^4.2.3",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^22.9.3",
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vue/test-utils": "^2.4.6",
-    "autoprefixer": "^10.4.19",
-    "cypress": "^13.9.0",
-    "cypress-vite": "^1.5.0",
-    "eslint": "^8.56.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.15.0",
     "eslint-plugin-vitest-globals": "^1.5.0",
-    "eslint-plugin-vue": "^9.26.0",
-    "jsdom": "^24.0.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vite-plugin-vue-devtools": "^7.1.3",
-    "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.17"
+    "eslint-plugin-vue": "^9.31.0",
+    "happy-dom": "^15.11.6",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.11",
+    "vite-plugin-vue-devtools": "^7.6.4",
+    "vitest": "^2.1.5",
+    "vue-tsc": "^2.1.10"
   }
 }
