--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "baseUrl": ".",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "paths": {
       "@/*": [
         "src/*"
@@ -32,6 +32,6 @@
   "exclude": [
     "dist",
     "node_modules",
-    "cypress"
+    "eslint.config.js"
   ]
 }
